--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     <title>FlaskBlog</title>
 </head>
 <body>
-    <h1 class="amore_mio">Tarantina mia, ti amo</h1>
+    <h1 class="amore_mio"> mia, ti amo</h1>
 </body>
 </html>
