--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <link rel= "stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    <link rel= "stylesheet" href="{{url_for('static', filename='css/styl.css')}}">
     <title>FlaskBlog</title>
 </head>
 <body>
